HelloUltraviolet/Fixtures/RejectedSource/Procedures/InvariantPublicMutableField/Source/Main.uv
//! Rejected invariant specimen for public mutable fields on invariant-bearing types.

public record InvariantPublicOwner {
    public value: i32
} |: { self.value > 0 }
